product-service/product-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: eztio
  annotations:
    prometheus.io.path: /actuator/prometheus
    prometheus.io.port: '8081'
    prometheus.io.scrape: 'true'
spec:
  # На какие поды будет работать этот сервис
  selector:
    # все поды с таким лейблом
    project: product-pod
  ports:
    - name: product-port
      protocol: TCP
      # Порт на сервисе
      port: 80
      # Порт на поде (в контейнере)
      targetPort: 8080
    - name: product-port-metrics
      protocol : TCP
      port: 8081
      targetPort: 8081
  type: NodePort
